--- a/config.json
+++ b/config.json
@@ -29,5 +29,17 @@
           "999": "#080A0C"
         }
       }
-    }
+    },
+    "stickers": [
+      "https://c.tenor.com/35wdbHi0myYAAAAi/ultrakillnatan.gif",
+      "https://c.tenor.com/g0O71yszHeEAAAAi/ultrakillnatan.gif",
+      "https://c.tenor.com/DtyJY3TmXwYAAAAi/animated-anime.gif",
+      "https://c.tenor.com/suYddJa-q34AAAAi/hxh.gif",
+      "https://c.tenor.com/HvOIgY2kBToAAAAC/hisoka-hxh.gif",
+      "https://c.tenor.com/DyC25FyjsvYAAAAd/hunter-x-hunter-dance-wavy-occean.gif",
+      "https://c.tenor.com/1BNL0fKc8QsAAAAC/netero-hx-h.gif",
+      "https://c.tenor.com/oWF3gQ2RxJAAAAAC/gon-freecss-rage.gif",
+      "https://c.tenor.com/cP2c-q7CLWIAAAAC/gon-tears.gif",
+      "https://c.tenor.com/4oAX7iKflj8AAAAd/dancing-hunter-x-hunter.gif"
+    ]
 }
