--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Matrix (peas)",
+    "name": "HUNTERCORD - hXh",
     "theme": {
       "colors": {
         "primary": {
